WIP: Reduce guesswork around RPC input/output
// FIXME: adjust codec internals to pass the QNames accordingly

JIRA: MDSAL-696
Change-Id: I4f0242f7122e454667bb94bb38be54d6f9fda157
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>