@@ -9,6 +9,7 @@ package org.opendaylight.mdsal.binding.dom.adapter;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
@@ -16,30 +17,35 @@ import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.verify;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.util.concurrent.ListenableFuture;
-import java.lang.reflect.Field;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 import org.junit.Before;
 import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.mockito.Mock;
+import org.mockito.junit.MockitoJUnitRunner;
 import org.opendaylight.mdsal.binding.dom.codec.api.BindingNormalizedNodeSerializer;
 import org.opendaylight.yangtools.yang.binding.DataContainer;
+import org.opendaylight.yangtools.yang.common.QName;
 import org.opendaylight.yangtools.yang.common.RpcResult;
 
+@RunWith(MockitoJUnitRunner.StrictStubs.class)
 public class LazyDOMRpcResultFutureTest {
+    @Mock
+    private BindingNormalizedNodeSerializer codec;
+    @Mock
+    private ListenableFuture<RpcResult<?>> future;
+    @Mock
+    private RpcResult<?> domRpcResult;
 
     private LazyDOMRpcResultFuture lazyDOMRpcResultFuture;
-    private final BindingNormalizedNodeSerializer codec = mock(BindingNormalizedNodeSerializer.class);
-    private final ListenableFuture<RpcResult<?>> future = mock(ListenableFuture.class);
-    private final RpcResult<?> domRpcResult = mock(RpcResult.class);
 
     @Before
     public void setUp() throws Exception {
-        lazyDOMRpcResultFuture = LazyDOMRpcResultFuture.create(codec, future);
-        reset(future);
+        lazyDOMRpcResultFuture = new LazyDOMRpcResultFuture(codec, QName.create("foo", "foo"), future);
         doReturn(true).when(future).cancel(anyBoolean());
         doNothing().when(future).addListener(any(), any());
 
@@ -66,40 +72,29 @@ public class LazyDOMRpcResultFutureTest {
 
         assertTrue(lazyDOMRpcResultFuture.isCancelled() && lazyDOMRpcResultFuture.isDone());
         assertEquals(lazyDOMRpcResultFuture.get(), lazyDOMRpcResultFuture.get(1, TimeUnit.SECONDS));
-        final Field result = LazyDOMRpcResultFuture.class.getDeclaredField("result");
-        result.setAccessible(true);
-        result.set(lazyDOMRpcResultFuture, null);
+
+        lazyDOMRpcResultFuture.result = null;
         assertEquals(lazyDOMRpcResultFuture.get(1, TimeUnit.SECONDS), lazyDOMRpcResultFuture.get());
 
-        result.set(lazyDOMRpcResultFuture, null);
+        lazyDOMRpcResultFuture.result = null;
         doReturn(new Object()).when(domRpcResult).getResult();
         assertNotNull(lazyDOMRpcResultFuture.get());
 
-        result.set(lazyDOMRpcResultFuture, null);
+        lazyDOMRpcResultFuture.result = null;
         doReturn(false).when(domRpcResult).isSuccessful();
-        doReturn(ImmutableList.of()).when(domRpcResult).getErrors();
+        doReturn(List.of()).when(domRpcResult).getErrors();
         assertNotNull(lazyDOMRpcResultFuture.get());
     }
 
-    @SuppressWarnings({"checkstyle:IllegalThrows", "checkstyle:IllegalCatch", "checkstyle:avoidHidingCauseException"})
-    @Test(expected = InterruptedException.class)
-    public void checkedGetWithException() throws Throwable {
+    @Test
+    public void checkedGetWithException() throws Exception {
         doThrow(InterruptedException.class).when(future).get();
-        try {
-            lazyDOMRpcResultFuture.get();
-        } catch (RuntimeException e) {
-            throw e.getCause();
-        }
+        assertThrows(InterruptedException.class, lazyDOMRpcResultFuture::get);
     }
 
-    @SuppressWarnings({"checkstyle:IllegalThrows", "checkstyle:IllegalCatch", "checkstyle:avoidHidingCauseException"})
-    @Test(expected = InterruptedException.class)
-    public void checkedGetWithException2() throws Throwable {
+    @Test
+    public void checkedGetWithException2() throws Exception {
         doThrow(InterruptedException.class).when(future).get(1, TimeUnit.SECONDS);
-        try {
-            lazyDOMRpcResultFuture.get(1, TimeUnit.SECONDS);
-        } catch (RuntimeException e) {
-            throw e.getCause();
-        }
+        assertThrows(InterruptedException.class, () -> lazyDOMRpcResultFuture.get(1, TimeUnit.SECONDS));
     }
 }
